# LLM-engineering

./: CMakeLists.txt  README.md  user_entry.cpp
examples/: README.md
examples/cpp/: CMakeLists.txt
examples/cpp/attention/: CMakeLists.txt  context_attn_example.cpp  self_attn_example.cpp
examples/cpp/decoder/: CMakeLists.txt  context_decoder_example.cpp  self_decoder_example.cpp
examples/cpp/ffn/: CMakeLists.txt  ffn_example.cpp
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  act_kernel.h  add_residual.cu  add_residual.h  attn_softmax_kernel.cu  attn_softmax_kernel.h  build_casual_mask.cu  build_casual_mask.h  cal_paddingoffset.cu  cal_paddingoffset.h  concat_past_kv.cu  concat_past_kv.h  cublas_utils.cc  cublas_utils.h  fused_addresidual_norm.cu  fused_addresidual_norm.h  fused_decoder_self_attention.cu  fused_decoder_self_attention.h  fused_transpose_and_remv_pad.cu  fused_transpose_and_remv_pad.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  qkv_bias_and_RoPE.cu  qkv_bias_and_RoPE.h  repeat_kv.cu  repeat_kv.h  rmsnorm_kernel.cu  rmsnorm_kernel.h  sampling.cu  sampling.h  topK.cu  topK.h  topK_bk.cu  topK_bk.h
src/layers/: CMakeLists.txt
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: CMakeLists.txt  basemodel.h  tokenizer.h
src/models/llama/: llama.cpp  llama.h  llama_params.h
src/utils/: CMakeLists.txt  cuda_debug_utils.cuh  debug_utils.h  macro.h  model_utils.h  params.h  string_utils.h  tensor.h  vectorize_utils.h  weight_utils.cu  weight_utils.h
src/weights/: base_weights.h  weight.h
src/weights/llama/: CMakeLists.txt  attention_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.cc  layer_weights.h  llama_weights.cc  llama_weights.h  norm_weights.h
tests/unittests/: CMakeLists.txt  test_act.cu  test_bias_and_RoPE.cu  test_bmm.cu  test_cal_paddingoffset.cu  test_casual_mask.cu  test_concat_kv.cu  test_data_compare.cu  test_fused_addresidual_norm.cu  test_fused_decoder_attention.cu  test_fused_trans_remv_pad.cu  test_input_embedding.cu  test_linear.cu  test_mask_softmax.cu  test_repeat_kv.cu  test_residual.cu  test_rmsnorm.cu  test_sampling.cu  test_topk.cu
tools/: HF_llama_run_script.py  README.md  convert_downloaded_llama_weights.py  weights_convert.py
